--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -3,4 +3,13 @@
   padding: 0;
   box-sizing: border-box;
   background-color: aqua;
+}
+
+#math_s {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=style.css.map */
