--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -7,7 +7,7 @@
 
 #math_s {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   justify-content: center;
   align-items: center;
 }/*# sourceMappingURL=style.css.map */
