--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -2,7 +2,6 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: aqua;
 }
 
 #math_s {
@@ -10,4 +9,9 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
+}
+#math_s .cont {
+  border: 5px solid black;
+  width: 40vw;
+  height: 80vh;
 }/*# sourceMappingURL=style.css.map */
