--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -2,7 +2,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: aqua;
 }
 
 #math_s{
@@ -10,4 +9,10 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
+
+    .cont{
+        border: 5px solid black;
+        width: 40vw;
+        height: 80vh;
+    }
 }
