--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -4,14 +4,26 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: #fefae0;
+}
+
 #math_s {
+  margin-top: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(250, 237, 205, 0.88);
+  background-color: rgba(250, 237, 205, 0.7);
 }
 #math_s .cont {
-  border: 5px solid black;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(212, 163, 115, 0.88);
   width: 40vw;
   height: 80vh;
+  background-color: rgba(212, 163, 115, 0.7);
 }/*# sourceMappingURL=style.css.map */
