--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -49,14 +49,22 @@ html{
     }
 
     #calculator_cont{
-        margin-left: 5vh;
+        margin-right: 5vw;
     }
     #history_cont{
-        margin-right: 5vh;
+        margin-left: 5vw;
 
         #history{
-                div:nth-child(even){
-                    background-color: $base-color;
+            div:nth-child(even){
+                background-color: $base-color;
+            }
+            div:nth-child(odd){
+                background-color: $item-color;
+            }
+
+            div{
+                width: fit-content;
+                text-align: center;
             }
         }
     }
