--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -34,7 +34,7 @@ html{
     width: 70vw;
     margin-left: 15vw;
     border-radius: 10px;
-    box-shadow: 0 0 10px getShadow($base--1-color);
+    box-shadow: 0 0 10px 10px getShadow($base--1-color);
     background-color: convertTOBG($base-1-color);
 }
 
@@ -44,7 +44,7 @@ html{
     .cont{
         border: none;
         border-radius: 10px;
-        box-shadow: 0 0 10px getShadow($base--2-color);
+        box-shadow: 0 0 10px 10px getShadow($base--2-color);
         width: 20vw;
         height: fit-content;
         background-color: convertTOBG($base-2-color);
