--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -35,6 +35,7 @@ html {
   height: -moz-fit-content;
   height: fit-content;
   background-color: rgba(212, 163, 115, 0.7);
+  padding: 2vh;
 }
 #math_cont #calculator_cont {
   margin-right: 5vw;
@@ -42,11 +43,16 @@ html {
 #math_cont #history_cont {
   margin-left: 5vw;
 }
+#math_cont #history_cont #history {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
 #math_cont #history_cont #history div:nth-child(even) {
-  background-color: #fefae0;
+  background-color: rgba(233, 237, 201, 0.7);
 }
 #math_cont #history_cont #history div:nth-child(odd) {
-  background-color: #faedcd;
+  background-color: rgba(204, 213, 174, 0.7);
 }
 #math_cont #history_cont #history div {
   width: -webkit-fit-content;
