--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -61,7 +61,7 @@ html{
 
         #history{
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             align-items: center;
 
 
