--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -46,7 +46,7 @@ html{
     .cont{
         border: none;
         border-radius: 10px;
-        box-shadow: 0 0 10px 5px getShadow($black);
+        box-shadow: 0 0 10px 2px getShadow($black);
         width: 20vw;
         height: fit-content;
         background-color: convertTOBG($base-2-color);
@@ -73,7 +73,7 @@ html{
             }
 
             div{
-                width: fit-content;
+                padding: auto;
                 text-align: center;
             }
         }
