--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -29,7 +29,7 @@ html {
 #math_cont .cont {
   border: none;
   border-radius: 10px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.88);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.88);
   width: 20vw;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -55,8 +55,6 @@ html {
   background-color: rgba(204, 213, 174, 0.7);
 }
 #math_cont #history_cont #history div {
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  padding: auto;
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
