--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -18,7 +18,7 @@ html {
   width: 70vw;
   margin-left: 15vw;
   border-radius: 10px;
-  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.88);
+  box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.88);
   background-color: rgba(250, 237, 205, 0.7);
 }
 
@@ -55,6 +55,7 @@ html {
   background-color: rgba(204, 213, 174, 0.7);
 }
 #math_cont #history_cont #history div {
+  width: 100%;
   padding: auto;
   text-align: center;
 }/*# sourceMappingURL=style.css.map */
