--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -36,7 +36,7 @@ html{
     width: 70vw;
     margin-left: 15vw;
     border-radius: 10px;
-    box-shadow: 0 0 10px 5px getShadow($black);
+    box-shadow: 0 0 10px 2px getShadow($black);
     background-color: convertTOBG($base-1-color);
 }
 
@@ -73,6 +73,7 @@ html{
             }
 
             div{
+                width: 100%;
                 padding: auto;
                 text-align: center;
             }
