--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -47,6 +47,8 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  border: 1px solid #000000;
+  border-radius: 3px;
 }
 #math_cont #history_cont #history div:nth-child(even) {
   background-color: rgba(233, 237, 201, 0.7);
