--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -63,6 +63,8 @@ html{
             display: flex;
             flex-direction: column;
             align-items: center;
+            border: 1px solid $black;
+            border-radius: 3px;
 
 
             div:nth-child(even){
