--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -47,8 +47,9 @@ html {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid #000000;
-  border-radius: 3px;
+  border: 1px solid rgba(0, 0, 0, 0.88);
+  border-radius: 5px;
+  box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.88);
 }
 #math_cont #history_cont #history div:nth-child(even) {
   background-color: rgba(233, 237, 201, 0.7);
