--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -43,6 +43,10 @@ html {
 #math_cont #history_cont {
   margin-left: 5vw;
 }
+#math_cont #history_cont h1 {
+  text-align: center;
+  color: #ccd5ae;
+}
 #math_cont #history_cont #history {
   display: flex;
   flex-direction: column;
