--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -45,7 +45,7 @@ html {
 }
 #math_cont #history_cont h1 {
   text-align: center;
-  color: #ccd5ae;
+  color: #000000;
 }
 #math_cont #history_cont #history {
   display: flex;
