--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -62,7 +62,7 @@ html{
 
         h1{
             text-align: center;
-            color: $base--2-color;
+            color: $black;
         }
 
         #history{
