--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -54,19 +54,26 @@ html {
   box-shadow: 0 0 5px 1px rgba(0, 0, 0, 0.88);
   background-color: rgba(254, 250, 224, 0.7);
   padding: 2vh;
+  font-size: larger;
 }
 #math_cont #calculator_cont #calculator form input {
   border: none;
   background-color: #e9edc9;
+  padding: 2vh;
+  margin: 1vh;
+  border-bottom: 1px dashed rgba(0, 0, 0, 0.88);
 }
 #math_cont #calculator_cont #calculator form select {
   border: none;
   background-color: #e9edc9;
+  padding: 2vh;
 }
 #math_cont #calculator_cont #calculator form #sbutt {
   padding: 1vh;
   border: none;
   background-color: #e9edc9;
+  border: 1px solid rgba(0, 0, 0, 0.88);
+  margin-bottom: 1vh;
 }
 #math_cont #history_cont {
   margin-left: 5vw;
