--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -59,21 +59,20 @@ html {
 #math_cont #calculator_cont #calculator form input {
   border: none;
   background-color: #e9edc9;
-  padding: 2vh;
-  margin: 1vh;
+  padding: 1vh;
+  margin-bottom: 2vh;
   border-bottom: 1px dashed rgba(0, 0, 0, 0.88);
 }
 #math_cont #calculator_cont #calculator form select {
   border: none;
   background-color: #e9edc9;
-  padding: 2vh;
+  padding: 1vh;
 }
 #math_cont #calculator_cont #calculator form #sbutt {
-  padding: 1vh;
   border: none;
   background-color: #e9edc9;
   border: 1px solid rgba(0, 0, 0, 0.88);
-  margin-bottom: 1vh;
+  margin-top: 1vh;
 }
 #math_cont #history_cont {
   margin-left: 5vw;
