--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -75,23 +75,22 @@ html{
                 input{
                     border: none;
                     background-color: $base--1-color;
-                    padding: 2vh;
-                    margin: 1vh;
+                    padding: 1vh;
+                    margin-bottom: 2vh;
                     border-bottom: 1px dashed getShadow($black);
                 }
 
                 select{
                     border: none;
                     background-color: $base--1-color;
-                    padding: 2vh;
+                    padding: 1vh;
                 }
 
                 #sbutt{
-                    padding: 1vh;
                     border: none;
                     background-color: $base--1-color;
                     border: 1px solid getShadow($black);
-                    margin-bottom: 1vh;
+                    margin-top: 1vh;
                 }
             }
         }
