--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -21,6 +21,10 @@ html {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.88);
   background-color: rgba(250, 237, 205, 0.7);
 }
+#math_s h1 {
+  color: #000000;
+  margin-bottom: 7vh;
+}
 
 #math_cont {
   display: flex;
