Mégsem szeretem az életem, valaki pls netkábelt

--- a/src/main/resources/static/style/style.scss
+++ b/src/main/resources/static/style/style.scss
@@ -39,7 +39,7 @@ html{
     box-shadow: 0 0 10px 2px getShadow($black);
     background-color: convertTOBG($base-1-color);
 
-    h1{
+    #Math{
         color: $black;
         margin-bottom: 7vh;
     }
