--- a/src/main/resources/static/style/style.css
+++ b/src/main/resources/static/style/style.css
@@ -21,7 +21,7 @@ html {
   box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.88);
   background-color: rgba(250, 237, 205, 0.7);
 }
-#math_s h1 {
+#math_s #Math {
   color: #000000;
   margin-bottom: 7vh;
 }
